--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </li>
                         <li>
                         <h3>
-                            <span>[3]实习教育调查《高中信息技术传统式与探索式课堂中学习动机的对比研究》</span>
+                            <span>[3]实习教育调查《传统式与探索式课堂教学模式的对比研究》</span>
                             
                            
                             <time>2019.03-2019.06</time>
