fourth-edition cv

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <time>2017.3-2019.6</time>
                         </h3>
                         <ul class="info-content">
-                            <li>教育实习：湖南师范大学附属中学高中信息组（副队长）就《小小数据师》一课实验双语教学；完成教育调查《高中信息技术传统式与探索式课堂中学习动机的对比研究》</li>
+                            <li>教育实习：湖南师范大学附属中学高中信息组（副队长）就《小小数据师》一课实验双语教学；完成教育调查《高中信息技术传统式与探索式课堂教学模式的对比研究》</li>
                             <li>获得高中信息技术和英语教师资格证双证</li>
                             <li>暑期支教：2017年暑假赴湖南益阳七家村小学进行为期一个月的支教</li>
                             <li>时长一学期：湖南长沙岳麓区义务辅导志愿活动</li>
