fifth-edition cv

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         </h3>
                         <ul class="info-content">
                             <li>《基于游戏行为的人格预测》梦行杯调研比赛二等奖，挑战杯校级立项，互联网+三等奖</li>
+                            <li>三下乡暑期调研实践公管院一等奖《“区校共建”对社会主义核心价值观融入城市社区的功能作用研究——以长沙市10家“区校共建”社区为例》，赴含浦，天马等社区实地(问卷+访谈)调研</li>
                             <li>大一省挑成员《守护没有花环的隐形盾牌——湖南省监狱警察心理健康现状及其应用》</li>
                             <li>青春正能量演讲比赛一等奖（演讲题目：传承的力量）</li>
                             <li>新生辩论比赛团体一等奖，七进四最佳辩手</li>
