seventh-edition cv

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>其他</h2>
                 <hr>
-                <p>爱好：学英语（业余自由翻译者）看电影，运动（最喜欢的运动是瑜伽和跑步）</p>
-                <p>性格特点：具有延迟满足感，富有耐力；具备团队合作能力；做事稳重又有自己的想法</p>
+                <p>爱好：学英语（希望老了做个业余自由翻译者），看电影，运动（最喜欢的运动是瑜伽和跑步）</p>
+                <p>性格特点：具有延迟满足感，富有耐力；具备一定团队合作能力和抗压；做事稳重有自己的想法</p>
             </section>
         </section>
     </article>
